Reorganized APIs and Routes

--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -4,6 +4,7 @@
 {% block stylesheets %}
 <link type="text/css" href="/static/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
 <link type="text/css" href="/static/assets/css/main.css" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 {% endblock stylesheets %}
 {% block content %}
    <main>
@@ -73,7 +74,7 @@
                <div class="start-section ms-4">
                   {% for project in projects %}
                       <div class="card card-project center-section">
-                          <a class="mt-3-5" href="/set-project?project={{ project.id }}">{{ project.name }}</a>
+                          <a class="mt-3-5" href="#" onclick="setActiveProject('{{ project.id }}'); return false;">{{ project.name }}</a>
                           <button class="badge badge-primary mt-2 fs--2" data-bs-toggle="modal" data-bs-target="#deleteProjectModal-{{ project.id }}">remove</button>
                       </div>
                       <div class="modal fade" id="deleteProjectModal-{{ project.id }}" tabindex="-1" aria-labelledby="deleteProjectModalLabel-{{ project.id }}" aria-hidden="true">
@@ -88,7 +89,7 @@
                                   </div>
                                   <div class="modal-footer">
                                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                      <a class="btn btn-danger" href="/delete-project?project={{ project.id }}">Confirm Delete</a>
+                                      <button type="button" class="btn btn-danger" onclick="deleteProject('{{ project.id }}')">Confirm Delete</button>
                                   </div>
                               </div>
                           </div>
@@ -132,6 +133,59 @@
             </div>
         </div>
         <script>
+            function setActiveProject(projectId) {
+                apiClient.projects.setActive(projectId)
+                    .then(response => {
+                        showFlashMessage("Project activated successfully", "success");
+                    })
+                    .catch(error => {
+                        console.error('Error setting active project:', error);
+                        showFlashMessage("Error setting active project: " + (error.message || 'Unknown error'), "error");
+                    });
+            }
+
+            function deleteProject(projectId) {
+                apiClient.projects.delete(projectId)
+                    .then(response => {
+                        // Close modal
+                        $(`#deleteProjectModal-${projectId}`).modal('hide');
+
+                        // Show success message
+                        showFlashMessage("Project deleted successfully", "success");
+
+                        // Get all available projects after deletion
+                        apiClient.projects.getAll()
+                            .then(response => {
+                                if (response.data && response.data.projects && response.data.projects.length > 0) {
+                                    // If there are still projects, set the first one as active
+                                    apiClient.projects.setActive(response.data.projects[0].id)
+                                        .then(() => {
+                                            // Reload page after a short delay to allow message to be seen
+                                            setTimeout(() => {
+                                                window.location.reload();
+                                            }, 1000);
+                                        });
+                                } else {
+                                    // If no projects left, redirect to choose-project page after a short delay
+                                    setTimeout(() => {
+                                        window.location.href = '/choose-project';
+                                    }, 1000);
+                                }
+                            })
+                            .catch(error => {
+                                console.error('Error getting projects after deletion:', error);
+                                showFlashMessage("Error getting projects after deletion", "error");
+                                // Fallback to choose-project page if there's an error
+                                setTimeout(() => {
+                                    window.location.href = '/choose-project';
+                                }, 1000);
+                            });
+                    })
+                    .catch(error => {
+                        console.error('Error deleting project:', error);
+                        showFlashMessage("Error deleting project: " + (error.message || 'Unknown error'), "error");
+                    });
+            }
         </script>
     </main>
 {% endblock content %}
