--- a/app/templates/layouts/base-fullscreen.html
+++ b/app/templates/layouts/base-fullscreen.html
@@ -17,13 +17,13 @@
 <head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-G72VFEFQ02"></script>
-<script>
+<!-- <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-G72VFEFQ02');
-</script>
+</script> -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- Primary Meta Tags -->
 <title>
@@ -35,7 +35,7 @@
 <meta name="description" content="PerForge is a tool for automating performance testing">
 <link type="image/x-icon" href="/static/assets/img/favicon.ico" rel="shortcut icon">
 <script src="/static/assets/js/perforge.js"></script>
-<!-- Specific Page JS goes HERE  -->    
+<!-- Specific Page JS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
 </head>
 <body>
