--- a/app/templates/home/graphs.html
+++ b/app/templates/home/graphs.html
@@ -4,6 +4,7 @@
 {% block stylesheets %}
 <link type="text/css" href="/static/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
 <link type="text/css" href="/static/assets/css/main.css" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 {% endblock stylesheets %}
 {% block content %}
 <main>
@@ -82,7 +83,7 @@
                                   </td>
                                   <td class="actions" style="width: 15%;">
                                       <button class="btn btn-secondary" type="button" data-bs-toggle="modal" data-bs-target="#graphModal" data-graph='{{ graph | tojson | safe }}'>Edit</button>
-                                      <a class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal{{ graph.id }}">Delete</a>
+                                      <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal{{ graph.id }}">Delete</button>
                                   </td>
                               </tr>
                               <div class="modal fade" id="deleteModal{{ graph.id }}" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
@@ -97,7 +98,7 @@
                                     </div>
                                     <div class="modal-footer">
                                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                      <a class="btn btn-danger" href="/delete-graph?graph_id={{ graph.id }}">Confirm Delete</a>
+                                      <button type="button" class="btn btn-danger" onclick="deleteGraph('{{ graph.id }}')">Confirm Delete</button>
                                     </div>
                                   </div>
                                 </div>
@@ -112,77 +113,80 @@
         {% with msgs = get_flashed_messages() %}
             {% include 'includes/flashed-msg.html' %}
         {% endwith %}
+        <div id="good-msg" style="display: none;" class="alert alert-success">
+            <span id="msg"></span>
+        </div>
+        <div id="bad-msg" style="display: none;" class="alert alert-danger">
+            <span id="msg"></span>
+        </div>
       </div>
     </div>
     <div class="modal fade" id="graphModal" aria-hidden="true" style="display: none;">
       <div class="modal-dialog">
           <div class="modal-content">
-            <form method="POST" action="/save-graph">
-              {{ form_for_graphs.hidden_tag() }}
-              <input type="hidden" name="id" id="graph_id">
-              <div class="modal-header">
-                  <h2 class="modal-title" id="addnewgraphLabel">Add graph</h2>
+            <div class="modal-header">
+                <h2 class="modal-title" id="addnewgraphLabel">Add graph</h2>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="mt-3">
+                  <label>Name</label>
+                  <input type="text" class="form-control" id="name" name="name">
+                  <input type="hidden" id="graph_id" name="id">
               </div>
-              <div class="modal-body">
-                <div class="mt-3">
-                    <label>Name</label>
-                    {{ form_for_graphs.name(class="form-control") }}
-                </div>
-                <div class="mt-3">
-                    <label>Grafana</label>
-                    <select class="form-select" id="grafana_id" name="grafana_id">
-                        {% for grafana in grafana_configs %}
-                            <option value="{{ grafana.id }}">{{ grafana.name }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <div class="mt-3">
-                    <label>Dashboard Id</label>
-                    <select class="form-select" id="dash_id" name="dash_id">
-                    </select>
-                </div>
-                <div class="mt-3">
-                    <label>View panel</label>
-                    {{ form_for_graphs.view_panel(class="form-control") }}
-                </div>
-                <div class="mt-3">
-                    <label>Panel width</label>
-                    {{ form_for_graphs.width(class="form-control") }}
-                </div>
-                <div class="mt-3">
-                    <label class="mt-3">Panel height</label>
-                    {{ form_for_graphs.height(class="form-control") }}
-                </div>
-                <div class="mt-3">
-                    <label class="mt-3">Custom vars (optional)</label>
-                    <div class="tooltip-container">
-                        <span class="fa-regular fa-circle-question me-2 mt-2"></span>
-                        <div class="tooltip-content">
-                            You can add additional custom variables to draw graphs with these variables. For example, use the following format: &var-varname=varvalue
-                        </div>
-                    </div>
-                    {{ form_for_graphs.custom_vars(class="form-control") }}
-                </div>
-                <div class="mt-3">
-                    <label>Prompt (optional)</label>
-                    <select class="form-select" id="prompt_id" name="prompt_id">
-                        <option value="" selected>Select a prompt</option>
-                        {% for prompt in graph_prompts %}
-                            <option value="{{ prompt.id }}" data-prompt="{{ prompt.prompt }}">{{ prompt.name }} ({{ prompt.type }})</option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <div class="mt-3">
-                    <label>Prompt Value</label>
-                    <textarea class="form-control" id="prompt_value" rows="5" readonly></textarea>
-                </div>
+              <div class="mt-3">
+                  <label>Grafana</label>
+                  <select class="form-select" id="grafana_id" name="grafana_id">
+                      {% for grafana in grafana_configs %}
+                          <option value="{{ grafana.id }}">{{ grafana.name }}</option>
+                      {% endfor %}
+                  </select>
               </div>
-              <div class="modal-footer">
-                  <div class="status-place" style="float: left;"></div>
-                  <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Close</button>
-                  <button class="btn btn-primary" type="submit">Save</button>
+              <div class="mt-3">
+                  <label>Dashboard Id</label>
+                  <select class="form-select" id="dash_id" name="dash_id">
+                  </select>
               </div>
-            </form>
+              <div class="mt-3">
+                  <label>View panel</label>
+                  <input type="text" class="form-control" id="view_panel" name="view_panel">
+              </div>
+              <div class="mt-3">
+                  <label>Panel width</label>
+                  <input type="text" class="form-control" id="width" name="width">
+              </div>
+              <div class="mt-3">
+                  <label class="mt-3">Panel height</label>
+                  <input type="text" class="form-control" id="height" name="height">
+              </div>
+              <div class="mt-3">
+                  <label class="mt-3">Custom vars (optional)</label>
+                  <div class="tooltip-container">
+                      <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                      <div class="tooltip-content">
+                          You can add additional custom variables to draw graphs with these variables. For example, use the following format: &var-varname=varvalue
+                      </div>
+                  </div>
+                  <input type="text" class="form-control" id="custom_vars" name="custom_vars">
+              </div>
+              <div class="mt-3">
+                  <label>Prompt (optional)</label>
+                  <select class="form-select" id="prompt_id" name="prompt_id">
+                      <option value="" selected>Select a prompt</option>
+                      {% for prompt in graph_prompts %}
+                          <option value="{{ prompt.id }}" data-prompt="{{ prompt.prompt }}">{{ prompt.name }}</option>
+                      {% endfor %}
+                  </select>
+              </div>
+              <div class="mt-3">
+                  <label>Prompt value</label>
+                  <textarea class="form-control" id="prompt_value" rows="3" readonly></textarea>
+              </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="saveGraphBtn">Save</button>
+            </div>
           </div>
       </div>
     </div>
@@ -191,13 +195,29 @@
           var grafanaConfigs = {{ grafana_configs | tojson | safe }};
 
           $('#grafana_id').change(function() {
-              var selectedGrafanaId = parseInt($(this).val());
-              var selectedGrafana = grafanaConfigs.find(function(grafana) {
-                  return grafana.id === selectedGrafanaId;
-              });
-              var dashboards = selectedGrafana.dashboards;
+              var selectedGrafanaId = $(this).val();
               var dashIdSelect = $('#dash_id');
+
+              // Clear existing options
               dashIdSelect.empty();
+
+              // Find the selected Grafana config
+              var selectedGrafana = null;
+              for (var i = 0; i < grafanaConfigs.length; i++) {
+                  if (grafanaConfigs[i].id == selectedGrafanaId) {
+                      selectedGrafana = grafanaConfigs[i];
+                      break;
+                  }
+              }
+
+              if (!selectedGrafana) {
+                  return;
+              }
+
+              // Get dashboards for the selected Grafana
+              var dashboards = selectedGrafana.dashboards || [];
+
+              // Add options for each dashboard
               dashboards.forEach(function(dashboard) {
                   dashIdSelect.append('<option value="' + dashboard.id + '">' + dashboard.content + '</option>');
               });
@@ -211,32 +231,106 @@
           $('button[data-bs-toggle="modal"][data-bs-target="#graphModal"]').click(function() {
               var graph = $(this).data('graph');
 
-              $.each(graph, function(key, value) {
-                  form.find('[name="' + key + '"]').val(value);
-                  if (key == "prompt_id" && value == ""){
-                      form.find('[name="prompt_id"]').val(`{{ form_for_graphs.prompt_id.default }}`);
-                  }
-              });
-
-              $('#grafana_id').val(graph.grafana_id).change();
-              $('#dash_id').val(graph.dash_id);
-
-              // Trigger change event to update the textarea with the selected prompt's value
-              $('#prompt_id').change();
-          });
-
-          modal.on('hidden.bs.modal', function() {
-              form[0].reset();
+              // Reset the form
               $('#graph_id').val('');
-              $('#prompt_value').val(''); // Clear the textarea when the modal is closed
+              $('#name').val('');
+              $('#view_panel').val('');
+              $('#width').val('');
+              $('#height').val('');
+              $('#custom_vars').val('');
+              $('#prompt_id').val('');
+
+              // Set modal title based on whether we're adding or editing
+              if (graph) {
+                  $('#addnewgraphLabel').text('Edit graph');
+
+                  // Populate form fields with graph data
+                  $('#graph_id').val(graph.id);
+                  $('#name').val(graph.name);
+                  $('#grafana_id').val(graph.grafana_id).change();
+                  $('#dash_id').val(graph.dash_id);
+                  $('#view_panel').val(graph.view_panel);
+                  $('#width').val(graph.width);
+                  $('#height').val(graph.height);
+                  $('#custom_vars').val(graph.custom_vars);
+                  $('#prompt_id').val(graph.prompt_id || '');
+              } else {
+                  $('#addnewgraphLabel').text('Add graph');
+              }
           });
 
           // Update the prompt value textarea when a prompt is selected
           $('#prompt_id').change(function() {
-              var selectedPrompt = $(this).find('option:selected').data('prompt');
-              $('#prompt_value').val(selectedPrompt || '');
+            var selectedPrompt = $(this).find('option:selected').data('prompt');
+            $('#prompt_value').val(selectedPrompt || '');
+          });
+
+          // Handle save button click
+          $('#saveGraphBtn').click(function() {
+              // Collect form data
+              var graphData = {
+                  id: $('#graph_id').val() || null,
+                  name: $('#name').val(),
+                  grafana_id: $('#grafana_id').val(),
+                  dash_id: $('#dash_id').val(),
+                  view_panel: $('#view_panel').val(),
+                  width: $('#width').val(),
+                  height: $('#height').val(),
+                  custom_vars: $('#custom_vars').val(),
+                  prompt_id: $('#prompt_id').val() || null
+              };
+
+              // Determine if we're creating or updating
+              if (graphData.id) {
+                  // Update existing graph
+                  apiClient.graphs.update(graphData.id, graphData)
+                      .then(function(response) {
+                          // Close modal and show success message
+                          $('#graphModal').modal('hide');
+                          showFlashMessage('Graph updated successfully', 'success');
+                          setTimeout(function() {
+                              window.location.reload();
+                          }, 1000);
+                      })
+                      .catch(function(error) {
+                          console.error('Error updating graph:', error);
+                          showFlashMessage('Error updating graph: ' + (error.message || 'Unknown error'), 'error');
+                      });
+              } else {
+                  // Create new graph
+                  apiClient.graphs.create(graphData)
+                      .then(function(response) {
+                          // Close modal and show success message
+                          $('#graphModal').modal('hide');
+                          showFlashMessage('Graph created successfully', 'success');
+                          setTimeout(function() {
+                              window.location.reload();
+                          }, 1000);
+                      })
+                      .catch(function(error) {
+                          console.error('Error creating graph:', error);
+                          showFlashMessage('Error creating graph: ' + (error.message || 'Unknown error'), 'error');
+                      });
+              }
           });
       });
+
+      // Function to delete a graph
+      function deleteGraph(graphId) {
+          apiClient.graphs.delete(graphId)
+              .then(function(response) {
+                  // Close modal and show success message
+                  $(`#deleteModal${graphId}`).modal('hide');
+                  showFlashMessage('Graph deleted successfully', 'success');
+                  setTimeout(function() {
+                      window.location.reload();
+                  }, 1000);
+              })
+              .catch(function(error) {
+                  console.error('Error deleting graph:', error);
+                  showFlashMessage('Error deleting graph: ' + (error.message || 'Unknown error'), 'error');
+              });
+      }
     </script>
   </main>
 {% endblock content %}
