--- a/app/templates/includes/scripts.html
+++ b/app/templates/includes/scripts.html
@@ -3,3 +3,4 @@
 <script src="/static/assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/static/assets/js/sidebars.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
+<script src="/static/assets/js/api-client.js"></script>
